--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,11 @@ google-generativeai==0.5.0
 requests==2.31.0
 pillow==10.0.0
 
+# Audio generation
+kokoro>=0.9.2
+soundfile==0.12.1
+numpy>=1.20.0
+
 # For development
 black==23.3.0
 pylint==2.17.5
